fix: the white space in products table on safari, the request sent 2 times when choosing a city or a street, the request is sent 2 times on scrolling the cities/street table, the active page is not changing to the actual page when a city/street is changed

--- a/src/app/shared/components/table/table.component.css
+++ b/src/app/shared/components/table/table.component.css
@@ -8,7 +8,6 @@
     position: relative;
 }
 .table-container::-webkit-scrollbar { width: 0 !important }
-
 .table-head,.pagination-footer{
     background-color: #222222;
     color: #feda44;
@@ -28,8 +27,11 @@
     line-height: 12px;
     height: 38px;
 }
-.hidden-head{
-    visibility: collapse;
+.hidden-head th{
+    line-height: 0px;
+}
+.real-table{
+    margin-top: -38px;
 }
 .table-item-cell{
     font-size: 11px;
